# Fine_CoreBanking

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  main.py
app/api/v1/: accounts.py  auth.py  journals.py  reports.py  users.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/models/: accounting.py  auth.py
app/repositories/: accounting.py
app/schemas/: accounting.py  auth.py
app/services/: accounting.py  auth.py  kafka_consumer.py  kafka_producer.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: seed_chart_of_accounts.py
tests/unit/: test_accounting_service.py
